[package]
name = "rust-blockchain"
version = "0.1.0"
authors = ["Jean LELIEVRE <Jean.LELIEVRE@supinfo.com>"]

[dependencies]
time = "0.1"
sha1 = { version = "0.6.0", features = ["std"] }
bincode = "1.0.0"
serde = "*"
serde_derive = "*"
sha2 = "0.8.0"
secp256k1 = "0.12.0"
lazy_static = "1.2.0"
hex = "0.3.2"

[lib]
path = "src/lib.rs"